Add high dpi images for "numbers" section

--- a/frontend/src/templates/partials/_numbers.html
+++ b/frontend/src/templates/partials/_numbers.html
@@ -1,6 +1,7 @@
 <section class="section sec-numbers" id="numbers">
 	<div class="container">
-		<div class="number-head " style="background-image: url('img/numbers-head-bg-2.webp');">
+		<div class="number-head "
+				 style="background-image: url('img/numbers-head-bg-2.webp'); background-image: image-set(url('img/numbers-head-bg-2.webp') 1x, url('img/numbers-head-bg-2@2x.webp') 2x, url('img/numbers-head-bg-2@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle}}</h2>
@@ -11,14 +12,18 @@
 		<div class="numbers">
 			{% for num in tileStats %}
 
-			<div class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}" style="--numbers-order: {{loop.index}}">
+			<div
+				class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}"
+				style="--numbers-order: {{loop.index}}">
 				<div class="numbers__head">
 					<div class="numbers__title">{{num.name}}</div>
 					{% if num.description %}
 					<div class="numbers__description">{{num.description}}</div>
 					{% endif %}
 				</div>
-				{% if num.nums %}<div class="numbers__val">{{num.nums}}</div>{% endif %}
+				{% if num.nums %}
+				<div class="numbers__val">{{num.nums}}</div>
+				{% endif %}
 				{% if num.img %}
 				<div class="numbers__img">
 					<img src="{{num.img}}" alt="{{num.name}}" role="presentation">
@@ -29,7 +34,8 @@
 		</div>
 
 		{% if info.tilesTitle2 %}
-		<div class="number-head " style="background-image: url('img/numbers-head-bg-1.webp');">
+		<div class="number-head "
+				 style="background-image: url('img/numbers-head-bg-1.webp'); background-image: image-set(url('img/numbers-head-bg-1.webp') 1x, url('img/numbers-head-bg-1@2x.webp') 2x, url('img/numbers-head-bg-1@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle2}}</h2>
@@ -41,14 +47,18 @@
 		<div class="numbers">
 			{% for num in tileStats2 %}
 
-			<div class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}" style="--numbers-order: {{loop.index}}">
+			<div
+				class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}"
+				style="--numbers-order: {{loop.index}}">
 				<div class="numbers__head">
 					<div class="numbers__title">{{num.name}}</div>
 					{% if num.description %}
 					<div class="numbers__description">{{num.description}}</div>
 					{% endif %}
 				</div>
-				{% if num.nums %}<div class="numbers__val">{{num.nums}}</div>{% endif %}
+				{% if num.nums %}
+				<div class="numbers__val">{{num.nums}}</div>
+				{% endif %}
 				{% if num.img %}
 				<div class="numbers__img">
 					<img src="{{num.img}}" alt="{{num.name}}" role="presentation">
@@ -60,7 +70,8 @@
 		{% endif %}
 
 		{% if info.tilesTitle3 %}
-		<div class="number-head " style="background-image: url('img/numbers-head-bg-3.webp');">
+		<div class="number-head "
+				 style="background-image: url('img/numbers-head-bg-3.webp'); background-image: image-set(url('img/numbers-head-bg-3.webp') 1x, url('img/numbers-head-bg-3@2x.webp') 2x, url('img/numbers-head-bg-3@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle3}}</h2>
@@ -72,14 +83,18 @@
 		<div class="numbers">
 			{% for num in tileStats3 %}
 
-			<div class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}" style="--numbers-order: {{loop.index}}">
+			<div
+				class="numbers__item {{'numbers__item--img-center' if num.isImgCenter}} {{'numbers__item--bg' if num.isBackgroundColor}} {{'numbers__item--lg' if num.isLarge}}"
+				style="--numbers-order: {{loop.index}}">
 				<div class="numbers__head">
 					<div class="numbers__title">{{num.name}}</div>
 					{% if num.description %}
 					<div class="numbers__description">{{num.description}}</div>
 					{% endif %}
 				</div>
-				{% if num.nums %}<div class="numbers__val">{{num.nums}}</div>{% endif %}
+				{% if num.nums %}
+				<div class="numbers__val">{{num.nums}}</div>
+				{% endif %}
 				{% if num.img %}
 				<div class="numbers__img">
 					<img src="{{num.img}}" alt="{{num.name}}" role="presentation">
