--- a/frontend/src/templates/partials/_numbers.html
+++ b/frontend/src/templates/partials/_numbers.html
@@ -1,7 +1,7 @@
 <section class="section sec-numbers" id="numbers">
 	<div class="container">
 		<div class="number-head "
-				 style="background-image: url('img/numbers-head-bg-2.webp'); background-image: image-set(url('img/numbers-head-bg-2.webp') 1x, url('img/numbers-head-bg-2@2x.webp') 2x, url('img/numbers-head-bg-2@3x.webp') 3x)">
+			style="background-image: url('img/numbers-head-bg-2.webp'); background-image: image-set(url('img/numbers-head-bg-2.webp') 1x, url('img/numbers-head-bg-2@2x.webp') 2x, url('img/numbers-head-bg-2@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle}}</h2>
@@ -35,7 +35,7 @@
 
 		{% if info.tilesTitle2 %}
 		<div class="number-head "
-				 style="background-image: url('img/numbers-head-bg-1.webp'); background-image: image-set(url('img/numbers-head-bg-1.webp') 1x, url('img/numbers-head-bg-1@2x.webp') 2x, url('img/numbers-head-bg-1@3x.webp') 3x)">
+			style="background-image: url('img/numbers-head-bg-1.webp'); background-image: image-set(url('img/numbers-head-bg-1.webp') 1x, url('img/numbers-head-bg-1@2x.webp') 2x, url('img/numbers-head-bg-1@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle2}}</h2>
@@ -61,7 +61,7 @@
 				{% endif %}
 				{% if num.img %}
 				<div class="numbers__img">
-					<img src="{{num.img}}" alt="{{num.name}}" role="presentation">
+					<img src="{{num.img}}" alt="{{num.name}}" role="presentation" />
 				</div>
 				{% endif %}
 			</div>
@@ -71,7 +71,7 @@
 
 		{% if info.tilesTitle3 %}
 		<div class="number-head "
-				 style="background-image: url('img/numbers-head-bg-3.webp'); background-image: image-set(url('img/numbers-head-bg-3.webp') 1x, url('img/numbers-head-bg-3@2x.webp') 2x, url('img/numbers-head-bg-3@3x.webp') 3x)">
+			style="background-image: url('img/numbers-head-bg-3.webp'); background-image: image-set(url('img/numbers-head-bg-3.webp') 1x, url('img/numbers-head-bg-3@2x.webp') 2x, url('img/numbers-head-bg-3@3x.webp') 3x)">
 			<div class="section__head shine">
 				<h3 class="section__suptitle">The conference in numbers</h3>
 				<h2 class="section__title">{{info.tilesTitle3}}</h2>
