update numbers section

--- a/frontend/src/sass/partials/_hero.sass
+++ b/frontend/src/sass/partials/_hero.sass
@@ -146,7 +146,7 @@
 			height: 100%
 			pointer-events: none
 			z-index: 1
-			background: linear-gradient(0deg, rgba(0, 0, 0, 0.40) 0%, rgba(0, 0, 0, 0.40) 100%)
+			background: rgba(0, 0, 0, 0.7)
 .logo
 	display: block
 	width: 110px
