--- a/frontend/src/sass/partials/_conference-sponsor.sass
+++ b/frontend/src/sass/partials/_conference-sponsor.sass
@@ -74,54 +74,47 @@
 				font-size: 48px
 			+xxs
 				font-size: 38px
-	&__title
+	&__content
 		flex: 1
+		max-width: 650px
+	&__title
+
 		font-size: 22px
 		line-height: 1.1
-		margin-right: 30px
+
 		+lg
 			font-size: 20px
 		+sm
 			font-size: 16px
-			margin-right: 0
 
 	&__description
 		flex: none
 		align-self: flex-start
 		width: 42.1%
+		font-size: 16px
 		line-height: 1.2
-		color: var(--clr-gray-100)
+		margin-top: 10px
 		+lg
-			width: 40%
-		+md
-			display: none
+			font-size: 14px
+		+xs
+			font-size: 12px
 	&__body
-		margin-top: -20px
-		width: calc(42.1% - 4px)
-		margin-left: auto
 		padding-bottom: 35px
+		padding-top: 16px
 		flex: none
-		margin-right: 90px
 		display: none
-		+lg
-			width: calc(40% - 4px)
+		max-width: 650px
+		margin-left: 115px
 		+md
-			width: 100%
-			margin-top: 0
-		.cs-list__description
-			display: none
-			width: 100%
-			color: #fff
-			+md
-				display: block
-				margin-bottom: 20px
-			&:last-child
-				margin-bottom: 0 !important
+			margin-left: 75px
+		+sm
+			margin-left: 0
+
 	&__caret
 		flex: none
+		margin-left: auto
 		width: 60px
 		height: 60px
-		margin-left: 10px
 		border: 1px solid var(--clr-black-300)
 		border-radius: 50%
 		position: relative
