--- a/frontend/src/sass/partials/_popups.sass
+++ b/frontend/src/sass/partials/_popups.sass
@@ -87,21 +87,24 @@
 			opacity: 1
 
 .package-popup
-	display: flex
+	display: grid
 	align-items: flex-start
+	grid-template-columns: 1fr 42%
+	grid-template-rows: auto 1fr
 	+md
-		display: block
-	&__left
-		flex: 1
+		grid-template-columns: 1fr
+		grid-template-rows: auto
+	&__info
 		padding: var(--_padding-y) var(--_padding-x)
 		background: var(--clr-black)
 
 	&__right
-		width: 42%
-		flex: none
+		grid-column: 2
+		grid-row: 1/3
 		padding: var(--_padding-y) var(--_padding-x)
 		+md
-			width: auto
+			grid-row: 2
+			grid-column: auto
 			padding-top: 40px
 			padding-bottom: 40px
 		+sm
@@ -167,15 +170,14 @@
 				span
 					text-decoration: underline
 	&__addons
-		margin-left: calc(var(--_padding-x) * -1)
-		margin-right: calc(var(--_padding-x) * -1)
+		grid-column: 1
+		grid-row: 2
 		padding: calc(var(--_padding-y) - 10px) var(--_padding-x)
 
 		background: #0A0A0A
-		margin-top: calc(var(--_padding-y) - 10px)
-		margin-bottom: calc(var(--_padding-y) * -1)
 		+md
-			margin-top: 40px
+			grid-column: auto
+			grid-row: auto
 			padding-top: 40px
 			padding-bottom: 40px
 		+sm
