--- a/frontend/src/sass/partials/_banner.sass
+++ b/frontend/src/sass/partials/_banner.sass
@@ -12,17 +12,17 @@
 	border-radius: 30px
 	position: relative
 	z-index: 1
-	min-height: 300px
+	min-height: 340px
 	+lg
 		gap: 60px
 	+md
 		min-height: 250px
 		padding: 40px
+		gap: 40px
 	+sm
 		flex-direction: column
 		padding: 20px
 		border-radius: 20px
-		gap: 40px
 
 	&__link
 		+coverdiv
@@ -50,6 +50,8 @@
 	&__content
 		flex: 1
 		min-width: 1px
+		display: flex
+		flex-direction: column
 		+sm
 			margin-top: auto
 			flex: none
@@ -57,14 +59,15 @@
 	&__title
 		color: var(--_color, #fff)
 		text-transform: uppercase
-		font-size: 48px
+		font-size: 40px
 		line-height: 1
 		+lg
-			font-size: 38px
+			font-size: 36px
 		+md
-			font-size: 32px
-		+xxs
-			font-size: 20px
+			font-size: 28px
+		+xs
+			font-size: 24px
+
 	&__date
 		color: var(--_color, #fff)
 		text-transform: uppercase
@@ -90,14 +93,15 @@
 		+xxs
 			font-size: 10px
 	&__tags
-		margin-top: 75px
+		padding-top: 75px
+		margin-top: auto
 		font-size: 0
 		+lg
-			margin-top: 50px
+			padding-top: 50px
 		+md
-			margin-top: 40px
+			padding-top: 40px
 		+sm
-			margin-top: 20px
+			padding-top: 20px
 		span
 			margin-bottom: 2px
 			display: inline-block
